--- a/index.html
+++ b/index.html
@@ -91,7 +91,13 @@
                           data-append=""
                           
                         ></div>  
-                      </div>   
+                      </div>    
+                    <div class="pagebox">
+                        <div class="pages"></div>
+                        <div class="pages"></div>
+                        <div class="pages"></div>
+                        <div class="pages"></div>
+                    </div>
                 </div>
                 <div class="mbox1-2">
                     <!-- <p>logo1-2</p> -->
@@ -598,15 +604,14 @@
                     </div>
                 </div>
                 <div class="fbox1-2">
-                    <p>(단위:min, 조제기 번호)</p>
+                    <p>(단위:건)</p>
                     <canvas id="leftChart"></canvas>
                 </div>  
                 <div class="fbox1-3"> 
                     <p>조제</p>
                     <p>마킹</p>
                     <p>포장</p> 
-                </div>
-
+                </div> 
                 <div class="pagebox">
                     <div class="pages"></div>
                     <div class="pages"></div>
@@ -627,7 +632,7 @@
                     </div>
                 </div> 
                 <div class="fbox2-2">
-                    <p>(단위:min, 조제기 번호)</p>
+                    <p>(단위:건)</p>
                     <canvas id="rightChart"></canvas>
                 </div>   
                 <div class="fbox2-3"> 
