--- a/db_mode2.html
+++ b/db_mode2.html
@@ -23,17 +23,14 @@
         href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Barlow:wght@600&family=Saira+Extra+Condensed:wght@500&display=swap"
         rel="stylesheet"> 
     <!-- css ----------------------------  --> 
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/db_mode1.css">
-    <!-- <link rel="stylesheet" href="./css/flipcard_dark.css"> -->
+    <link rel="stylesheet" href="./css/reset.css"> 
+    <link rel="stylesheet" href="./css/db_main.css">
+    <!-- <link rel="stylesheet" href="./css/db_mode1.css"> --> 
 
-    <!--  js ----------------------------  -->
-    <!-- <script src="./js/animation.js"></script> -->
+    <!--  js ----------------------------  --> 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="./js/jQuery v3.7.1.js"></script>
-    <script src="./js/GaugeMeter.js"></script>
-    <!-- <script src="./js/gaugeandchart.js"></script>
-    <script src="./js/chartdetail.js"></script> -->
+    <script src="./js/GaugeMeter.js"></script> 
     <script src="./js/flipcard_dark.js"></script> 
     <script src="./js/mode2.js"></script>
      
@@ -95,10 +92,9 @@
                         ></div>  
                       </div>   
                 </div>
-                <div class="mbox1-2">
-                    <!-- <p>logo1-2</p> -->
+                <div class="mbox1-4"> 
                     <p>탕전기 동작 현황</p>
-                    <div class="mbox1-2-1 decarray">
+                    <div class="mbox1-4-1 decarray">
                         <div class="status">
                             <div class="status1-1">
                                 <div class="statuscircle on"></div>
@@ -523,9 +519,8 @@
                         <div class="pages"></div>
                     </div>
                 </div> 
-                <div class="mbox3-2">
-                    <!-- <p>logo8</p> -->
-                    <p>택배 마감까지 남은 시간</p>  
+                <div class="mbox3-4"> 
+                    <p>택배 마감까지 남은 시간</p>   
                     <div class="clockbox">
                         <div class="clockbox1-1"> <p>로젠</p>
                             <div class="clock">  
@@ -633,43 +628,41 @@
                 </div>
             </div>  
         </main>
-        <section class="footer"> 
-                <div class="fbox fbox1">
-                    <!-- <p>logo10</p> -->
-                    <p>전체 주문 대비 현재 작업량</p>
-                    <!-- <p>(단위:건)</p> -->
-                    <div class="bottombox1-1">
-                        <p>(단위:건)</p>
-                        <canvas id="leftChart"></canvas>
-                    </div>  
-                    <div class="cbox">
+        <section class="footer">  
+                <div class="fbox fbox1"> 
+                    <p>전체 주문 대비 현재 작업량</p> 
+                    <div class="fbox1-1">
                         <div class="fcbox fcbox1">
                             <div class="fcircle fcircle1"></div>
-                            <p>전체 주문</p> 
+                            <p>전체 주문</p>
                         </div>
                         <div class="fcbox fcbox2">
                             <div class="fcircle fcircle2"></div>
                             <p>현재 작업량</p>
                         </div>
-                    </div>  
-                </div>
+                    </div>
+                    <div class="fbox1-2">
+                        <p>(단위:건)</p>
+                        <canvas id="leftChart"></canvas>
+                    </div>   
+                </div> 
                 <div class="fbox fbox2">
-                    <!-- <p>logo11</p> -->
-                    <p>탕전기별 소요 시간</p>
-                    <!-- <p>(단위:min, 탕전기 번호)</p> -->
-                    <div class="bottombox1-2">
+                    <!-- <p>logo11</p> --> 
+                    <p>탕전기별 소요 시간</p> 
+                    <div class="fbox1-2">
                         <p>(단위:min, 탕전기 번호)</p>
                         <canvas id="decChart"></canvas>
                     </div>  
-                    <div class="cbox">
+                    <div class="fbox1-1">
                         <div class="fcbox fcbox1">
-                            <div class="fcircle fcircle1"></div><p>평균 소요 시간</p> 
+                            <div class="fcircle fcircle1"></div>
+                            <p>평균 소요 시간</p>
                         </div>
                         <div class="fcbox fcbox2">
-                            <div class="fcircle fcircle3"></div><p>탕전기별 소요 시간</p>
+                            <div class="fcircle fcircle3"></div>
+                            <p>평균 소요 시간</p>
                         </div>
                     </div>  
-
                     <div class="pagebox">
                         <div class="pages"></div>
                         <div class="pages"></div>
