--- a/db_mode3.html
+++ b/db_mode3.html
@@ -409,7 +409,7 @@
                             </div>
                         </div>
                         <div class="ever1-3">
-                            <p>택배 작업 건수</p>
+                            <p>작업 완료 건수</p>
                             <div class="parcon">
                                 <div class="parcon1-1">
                                     <div class="par1-1">
@@ -426,10 +426,10 @@
                                         <p>한진</p>
                                         <p>400 / 400</p>
                                     </div>
-                                    <div class="par1-4">
+                                    <!-- <div class="par1-4">
                                         <p>기타</p>
                                         <p>400 / 400</p>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
